; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_nodemgr.c_nodemgr_remove_host.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_nodemgr.c_nodemgr_remove_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpsb_host = type { i32 }
%struct.host_info = type { i32 }

@nodemgr_highlevel = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hpsb_host*)* @nodemgr_remove_host to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nodemgr_remove_host(%struct.hpsb_host* %0) #0 {
  %2 = alloca %struct.hpsb_host*, align 8
  %3 = alloca %struct.host_info*, align 8
  store %struct.hpsb_host* %0, %struct.hpsb_host** %2, align 8
  %4 = load %struct.hpsb_host*, %struct.hpsb_host** %2, align 8
  %5 = call %struct.host_info* @hpsb_get_hostinfo(i32* @nodemgr_highlevel, %struct.hpsb_host* %4)
  store %struct.host_info* %5, %struct.host_info** %3, align 8
  %6 = load %struct.host_info*, %struct.host_info** %3, align 8
  %7 = icmp ne %struct.host_info* %6, null
  br i1 %7, label %8, label %16

8:                                                ; preds = %1
  %9 = load %struct.host_info*, %struct.host_info** %3, align 8
  %10 = getelementptr inbounds %struct.host_info, %struct.host_info* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @kthread_stop(i32 %11)
  %13 = load %struct.hpsb_host*, %struct.hpsb_host** %2, align 8
  %14 = getelementptr inbounds %struct.hpsb_host, %struct.hpsb_host* %13, i32 0, i32 0
  %15 = call i32 @nodemgr_remove_host_dev(i32* %14)
  br label %16

16:                                               ; preds = %8, %1
  ret void
}

declare dso_local %struct.host_info* @hpsb_get_hostinfo(i32*, %struct.hpsb_host*) #1

declare dso_local i32 @kthread_stop(i32) #1

declare dso_local i32 @nodemgr_remove_host_dev(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
